# etrading

./: .gitignore  CLAUDE.md  README.md  jupyter-notebook.sh  requirements.txt  setup.py
.claude/: CLAUDE.md
.claude/commands/: backtest.md  data-catalog.md  fee-schedule.md  load-data.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh
notebooks/: GMO-historical-trades.ipynb  Mock-ws-server-bitbank.ipynb  Test-ws-client.ipynb  Update-JQuants-SQLite.ipynb
notebooks/BB-FeeMM/: 01_data_exploration.html  02_orderbook_signal_analysis.html  03_mm_backtest.html  CLAUDE_LOG.md  README-01.md
notebooks/FXBTCJPY-HFT/: 02_strategy_backtest.html  03_improved_strategy.html  README-01.md
notebooks/GMO-HFT/: 01_volatility_adaptive_mm.html  02_improved_strategy.html  06_maker_execution_simulation.html  README.md
notebooks/JPE-DailyLS-NN/: 01_nn_model.html  02_nn_model_fixed.html  03_nn_attention_with_positions.html  04_nn_attention_leak_fixed.html  CLAUDE_LOG.md  README-01.md
notebooks/JPE-DailyLS-NN/models/: rank_prediction_mlp.pt  rank_prediction_mlp_v2.pt
notebooks/KusaCoin-Overshoot/: README-1.md  README-2.md
notebooks/MTL-Garch/: LSTM-Transformer-2class-UD.ipynb  LSTM-Transformer.ipynb
notebooks/Multi-Market/: Deviation-MM-BTCJPY-BB.ipynb  Deviation-MM-BTCJPY-BF.ipynb  Deviation-MM-BULKRUN-v1.html  Deviation-MM-BULKRUN-v1.ipynb  Deviation-MM-ETHJPY.ipynb  Deviation-MM-XRPJPY.ipynb  EDA.ipynb
notebooks/ShortTerm-ML/: README.md
notebooks/ToD/: TOD-backtest.ipynb  TOD-test.ipynb  validation-gmo-vs-others.ipynb
rust/: Cargo.toml
rust/crates/etr-common/: Cargo.toml
rust/crates/etr-common/src/: config.rs  datamodel.rs  lib.rs  tp_logger.rs
rust/crates/etr-feed-binance/: Cargo.toml
rust/crates/etr-feed-binance/src/: handler.rs  lib.rs
rust/crates/etr-feed-bitbank/: Cargo.toml
rust/crates/etr-feed-bitbank/src/: handler.rs  lib.rs
rust/crates/etr-feed-bitflyer/: Cargo.toml
rust/crates/etr-feed-bitflyer/src/: funding_rate.rs  handler.rs  lib.rs
rust/crates/etr-feed-bitmex/: Cargo.toml
rust/crates/etr-feed-bitmex/src/: handler.rs  lib.rs
rust/crates/etr-feed-bybit/: Cargo.toml
rust/crates/etr-feed-bybit/src/: handler.rs  lib.rs
rust/crates/etr-feed-coinbase/: Cargo.toml
rust/crates/etr-feed-coinbase/src/: handler.rs  lib.rs
rust/crates/etr-feed-coincheck/: Cargo.toml
rust/crates/etr-feed-coincheck/src/: handler.rs  lib.rs
rust/crates/etr-feed-gmo/: Cargo.toml
rust/crates/etr-feed-gmo/src/: crypt.rs  forex.rs  lib.rs
rust/crates/etr-feed-hyperliquid/: Cargo.toml
rust/crates/etr-feed-hyperliquid/src/: handler.rs  lib.rs
rust/crates/etr-feed-okx/: Cargo.toml
rust/crates/etr-feed-okx/src/: handler.rs  lib.rs
rust/crates/etr-hdb-dumper/: Cargo.toml
rust/crates/etr-hdb-dumper/src/: discord.rs  dumper.rs  lib.rs  parquet_writer.rs  schema.rs  tp_reader.rs
rust/crates/etr-publisher/: Cargo.toml
rust/crates/etr-publisher/src/: lib.rs  publisher.rs
rust/src/: main.rs
scripts/: clone_tp.sh  feed_process.py  feed_process_global.py  feed_process_hyperliquid.py  hdb_loop.py  main.py  run_dev_mm_v1.py  run_gmo_mm_v1.py  run_imb_mm_bb.py  run_tod_v1.py  temp_rename.py
scripts/data_download/: save_bgeometric.py  save_gmo_trades.py
scripts/derived_data/: gen_market_liquidity.py
scripts/rust/: rust_feed_process.sh  rust_hdb_loop.sh
scripts/strategy/: run_dev_mm_v1.py  run_imb_mm_bb_btc.py  run_imb_mm_bb_eth.py
src/etr/: auto_import.py  config.py
src/etr/common/: logger.py
src/etr/common/utils/: utils.py
src/etr/core/: async_logger.py  fifo.py  hdb_dumper.py  ws_client.py  ws_publisher.py
src/etr/core/api_client/: __init__.py  backtest_client.py  base.py  bitbank.py  coincheck.py  realtime_counter.py
src/etr/core/api_client/bitbank/: __init__.py  bitbank.py  error_codes.py
src/etr/core/api_client/bitflyer/: __init__.py  bitflyer.py
src/etr/core/api_client/gmo/: __init__.py  gmo.py
src/etr/core/cep/: __init__.py  cep_base.py  ema_realtime.py  impact_price_realtime.py  ohlc.py  ohlc_realtime.py  rate_ohlc.py
src/etr/core/datamodel/: datamodel.py
src/etr/core/feed_handler/: binance.py  binance_eoption.py  bitbank.py  bitbank_private_stream.py  bitflyer.py  bitmex.py  bybit.py  coinbase.py  coincheck.py  gmo_crypt.py  gmo_forex.py  gmo_private_stream.py  hyperliquid.py  okx.py
src/etr/core/notification/: discord.py
src/etr/core/ws/: __init__.py  ws_client.py  ws_publisher.py
src/etr/data/: bgeometric.py  data_loader.py  gmo_historical.py
src/etr/data/jquants/: api.py  api_v2.py  indices_info.csv  jquants_ddl.sql  sqlite.py
src/etr/data/jquants/ddl/: indices_info.csv  jquants_v1_ddl.sql  jquants_v2_ddl_00.sql  jquants_v2_ddl_01_fins.sql
src/etr/preprocessing/: book.py
src/etr/research/dev_mm/: v1.py  v2_bb.py
src/etr/research/mt_garch/: lstm_transformer.py  original.py
src/etr/research/tod/: v1.py
src/etr/strategy/: __init__.py  base_strategy.py  dummy.py  sample.py
src/etr/strategy/cross_fee/: cross_fee_v0.py
src/etr/strategy/dev_mm/: dev_mm_v1.py
src/etr/strategy/gmo_mm/: __init__.py  gmo_mm_v1.py
src/etr/strategy/imb_mm/: imb_mm_bb.py  imb_mm_bb_aggressive.py  imb_mm_bb_v2.py  imb_mm_bf.py
src/etr/strategy/tod/: tod_v1.py
src/etr/strategy/volatility_adaptive_mm/: volatility_adaptive_mm.py
src/etr/utils/: loader.py
tests/: test_gmo_private_api.py
