[package]
name = "etr-hdb-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
etr-common = { path = "../etr-common" }
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
