[package]
name = "etr-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
